src/objects/ClearChoice_Doctor__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Battle_Group_Stars__c</fullName>
        <formula>Battlegroup_Stars__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Battle Group Stars</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Battlegroup_Stars__c</fullName>
        <label>Battlegroup Stars</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCE_Credits__c</fullName>
        <description>ClearChoice Continuing Education Credits</description>
        <inlineHelpText>ClearChoice Continuing Education Credits</inlineHelpText>
        <label>CCE Credits</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Center_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center Information</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>ClearChoice Doctors</relationshipLabel>
        <relationshipName>ClearChoice_Doctors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Doctor_Type__c</fullName>
        <label>Doctor Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GP</fullName>
                </value>
                <value>
                    <fullName>OMS</fullName>
                </value>
                <value>
                    <fullName>Prosthodontist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Start_Date__c</fullName>
        <label>Employee Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Management_Essentials_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Management Essentials Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onboarding_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Onboarding Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overall_Mastery_Level__c</fullName>
        <label>Overall Mastery Level</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Mastery__c</fullName>
        <formula>CASE( Overall_Mastery_Level__c , 1, &apos;Associate&apos;, 2, &apos;Fellow&apos;, 3, &apos;Diplomate&apos;, 4, &apos;Clinical Director&apos;, &apos;None&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Mastery</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pacesetter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pacesetter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Part_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Part Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Practice_Leadership_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Practice Leadership Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Practice_Mastery_2_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Practice Mastery 2 Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Practice_Mastery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Practice Mastery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Practice_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies the practice owner of each center</description>
        <label>Practice Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rainmaker_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rainmaker Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scorecard_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scorecard Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Arches_Delivered__c</fullName>
        <label>Total Arches Delivered</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to User table to pull in doctor&apos;s information</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ClearChoice_Doctors</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ClearChoice Doctor</label>
    <nameField>
        <label>ClearChoice Doctor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ClearChoice Doctors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>